--- a/OmyAk/Info.plist
+++ b/OmyAk/Info.plist
@@ -22,7 +22,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>startFirstEnter</string>
+					<string>Main</string>
 				</dict>
 			</array>
 		</dict>
