--- a/SoundLog/SoundLog/Resources/Info.plist
+++ b/SoundLog/SoundLog/Resources/Info.plist
@@ -35,5 +35,7 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>녹음을 기록하려면 마이크 사용 허용해야합니다.</string>
 </dict>
 </plist>
